--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ html,body{cursor:url("https://1.bp.blogspot.com/-qbWo9mPKO2Y/YL9utYdQBdI/AAAAAAA
 <div class='py-3 px-2 px-lg-4 py-lg-5'>
 <div class='row'>
 <div class='avatarBox col-12 col-lg-5'>
-<img class='img-fluid' src='avatar.jpg'/>
+<img class='img-fluid' src='https://drive.usercontent.google.com/u/0/uc?id=19L3vjhSmh4vo2nhHlynA5Q4hDJBBLBrk&export=download'/>
 </div>
 <div class='infoBox col-12 col-lg-6 mt-2 mt-lg-0'>
 <p class='sayHi'>Hello</p>
